k8s/cowsay-dark/overlays/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cowsay-dark
spec:
  tls:
    - hosts:
        - cowsay-dark.keld.co
      secretName: cowsay-dark-tls
  rules:
    - host: cowsay-dark.keld.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cowsay-dark
                port:
                  number: 80
